force-app/main/default/objects/pdffiller_sfree__Scheduler__c/pdffiller_sfree__Scheduler__c.object-meta.xml
<CustomObject>
    <label>Scheduler</label>
    <nameField>
        <label>Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>