force-app/main/default/objects/pdffiller_sfree__Scheduler__c/fields/pdffiller_sfree__Params__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Params__c</fullName>
    <label>Params</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>