force-app/main/default/objects/pdffiller_sfree__Scheduler__c/fields/pdffiller_sfree__Query__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Query__c</fullName>
    <label>Query</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>